Adding insert child Remove comment Minimize the code
